# MetaHuman-DNA-Calibration

./: .gitattributes  .gitignore  CHANGELOG.md  LICENSE  README.md  README_out.md  dna_calibration.mod
dnacalib/: CMakeLists.txt
dnacalib/CMakeModulesExtra/: CMakeModulesExtra.cmake
dnacalib/CMakeModulesExtra/install/: Config.cmake.in  InstallLibrary.cmake
dnacalib/CMakeModulesExtra/symbols/: Defs.h.in  Symbols.cmake
dnacalib/CMakeModulesExtra/utilities/: SupportedCompileOptions.cmake
dnacalib/CMakeModulesExtra/version/: Version.rc.in  VersionHeader.cmake  VersionHeader.h.in  VersionInfo.cmake
dnacalib/DNACalib/: CMakeLists.txt  README.md
dnacalib/DNACalib/cmake/: DNACDependencies.cmake  Dependencies.cmake
dnacalib/DNACalib/examples/: CMakeLists.txt  CommandSequence.cpp  SingleCommand.cpp
dnacalib/DNACalib/include/dna/: BinaryStreamReader.h  BinaryStreamWriter.h  DataLayer.h  Defs.h  JSONStreamReader.h  JSONStreamWriter.h  Reader.h  StreamReader.h  StreamWriter.h  Writer.h
dnacalib/DNACalib/include/dna/layers/: BehaviorReader.h  BehaviorWriter.h  DefinitionReader.h  DefinitionWriter.h  Descriptor.h  DescriptorReader.h  DescriptorWriter.h  Geometry.h  GeometryReader.h  GeometryWriter.h
dnacalib/DNACalib/include/dna/types/: Aliases.h  ArrayView.h  StringView.h  Vector3.h
dnacalib/DNACalib/include/dna/version/: Version.h
dnacalib/DNACalib/include/dnacalib/: Command.h  DNACalib.h  Defs.h
dnacalib/DNACalib/include/dnacalib/commands/: CalculateMeshLowerLODsCommand.h  ClearBlendShapesCommand.h  CommandSequence.h  ConditionalCommand.h  PruneBlendShapeTargetsCommand.h  RemoveAnimatedMapCommand.h  RemoveBlendShapeCommand.h  RemoveJointAnimationCommand.h  RemoveJointCommand.h  RemoveMeshCommand.h  RenameAnimatedMapCommand.h  RenameBlendShapeCommand.h  RenameJointCommand.h  RenameMeshCommand.h  RotateCommand.h  ScaleCommand.h  SetBlendShapeTargetDeltasCommand.h  SetLODsCommand.h  SetNeutralJointRotationsCommand.h  SetNeutralJointTranslationsCommand.h  SetSkinWeightsCommand.h  SetVertexPositionsCommand.h  TranslateCommand.h  VectorOperations.h
dnacalib/DNACalib/include/dnacalib/dna/: DNACalibDNAReader.h
dnacalib/DNACalib/include/dnacalib/types/: Aliases.h
dnacalib/DNACalib/include/dnacalib/version/: Version.h  VersionInfo.h
dnacalib/DNACalib/include/pma/: Defs.h  MemoryResource.h  PolyAllocator.h  ScopedPtr.h  TypeDefs.h
dnacalib/DNACalib/include/pma/resources/: AlignedMemoryResource.h  ArenaMemoryResource.h  DefaultMemoryResource.h
dnacalib/DNACalib/include/pma/utils/: ManagedInstance.h
dnacalib/DNACalib/include/pma/version/: Version.h
dnacalib/DNACalib/include/status/: Defs.h  Provider.h  Status.h  StatusCode.h
dnacalib/DNACalib/include/status/version/: Version.h
dnacalib/DNACalib/include/trio/: Concepts.h  Defs.h  Stream.h
dnacalib/DNACalib/include/trio/streams/: FileStream.h  MemoryMappedFileStream.h  MemoryStream.h
dnacalib/DNACalib/include/trio/types/: Aliases.h  Parameters.h
dnacalib/DNACalib/include/trio/utils/: StreamScope.h
dnacalib/DNACalib/include/trio/version/: Version.h
dnacalib/DNACalib/src/dna/: BaseImpl.h  DNA.h  DataLayerBitmask.h  DenormalizedData.h  LODConstraint.cpp  LODConstraint.h  LODMapping.cpp  LODMapping.h  Reader.cpp  ReaderImpl.h  SurjectiveMapping.h  TypeDefs.h  Writer.cpp  WriterImpl.h
dnacalib/DNACalib/src/dna/filters/: AnimatedMapFilter.cpp  AnimatedMapFilter.h  BlendShapeFilter.cpp  BlendShapeFilter.h  JointFilter.cpp  JointFilter.h  MeshFilter.cpp  MeshFilter.h  Remap.h
dnacalib/DNACalib/src/dna/stream/: BinaryStreamReaderImpl.cpp  BinaryStreamReaderImpl.h  BinaryStreamWriterImpl.cpp  BinaryStreamWriterImpl.h  FilteredInputArchive.cpp  FilteredInputArchive.h  JSONStreamReaderImpl.cpp  JSONStreamReaderImpl.h  JSONStreamWriterImpl.cpp  JSONStreamWriterImpl.h  StreamReader.cpp  StreamWriter.cpp
dnacalib/DNACalib/src/dna/types/: Limits.h
dnacalib/DNACalib/src/dna/utils/: Extd.h  ScopedEnumEx.h
dnacalib/DNACalib/src/dnacalib/: Command.cpp  CommandImplBase.h  TypeDefs.h
dnacalib/DNACalib/src/dnacalib/commands/: CalculateMeshLowerLODsCommand.cpp  CalculateMeshLowerLODsCommandImpl.cpp  CalculateMeshLowerLODsCommandImpl.h  ClearBlendShapesCommand.cpp  CommandSequence.cpp  PruneBlendShapeTargetsCommand.cpp  RemoveAnimatedMapCommand.cpp  RemoveBlendShapeCommand.cpp  RemoveJointAnimationCommand.cpp  RemoveJointCommand.cpp  RemoveMeshCommand.cpp  RenameAnimatedMapCommand.cpp  RenameBlendShapeCommand.cpp  RenameJointCommand.cpp  RenameMeshCommand.cpp  RenameResourceCommand.h  RotateCommand.cpp  ScaleCommand.cpp  SetBlendShapeTargetDeltasCommand.cpp  SetLODsCommand.cpp  SetNeutralJointRotationsCommand.cpp  SetNeutralJointTranslationsCommand.cpp  SetSkinWeightsCommand.cpp  SetVertexPositionsCommand.cpp  SupportFactories.h  TranslateCommand.cpp
dnacalib/DNACalib/src/dnacalib/dna/: BaseImpl.h  DNA.h  DNACalibDNAReaderImpl.cpp  DNACalibDNAReaderImpl.h  DenormalizedData.h  LODConstraint.cpp  LODConstraint.h  LODMapping.cpp  LODMapping.h  ReaderImpl.h  SurjectiveMapping.h  WriterImpl.h
dnacalib/DNACalib/src/dnacalib/types/: BoundingBox.h  Triangle.cpp  Triangle.h  UVBarycentricMapping.cpp  UVBarycentricMapping.h
dnacalib/DNACalib/src/dnacalib/utils/: Algorithm.h  Extd.h  (+2 more)
dnacalib/DNACalib/src/pma/: MemoryResource.cpp
dnacalib/DNACalib/src/status/: PredefinedCodes.h  Provider.cpp  Registry.cpp  Registry.h  Status.cpp  Storage.cpp  Storage.h
dnacalib/DNACalib/src/tdm/: Computations.h  Mat.h  TDM.h  Transforms.h  Types.h  Vec.h
dnacalib/DNACalib/src/terse/: Archive.h
dnacalib/DNACalib/src/trio/: Concepts.cpp  Stream.cpp
dnacalib/PyDNA/: CMakeLists.txt  README.md
dnacalib/PyDNA/python3/: CMakeLists.txt  DNA.i  Geometry.i
dnacalib/PyDNA/python3/examples/: demo.py
dnacalib/PyDNACalib/: CMakeLists.txt  README.md
dnacalib/PyDNACalib/python3/: CMakeLists.txt  DNACalib.i
dnacalib/PyDNACalib/python3/examples/: clear_blend_shapes.py  demo.py  remove_joint.py
dnacalib/SPyUS/: CMakeLists.txt  README.md
dnacalib/SPyUS/include/spyus/: ArrayView.i  Caster.i  ExceptionHandling.i  TDM.i  Vector3.i
(+441 files in other folders)
